--- a/Docker/HW/HW_4/docker-compose.yml
+++ b/Docker/HW/HW_4/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3.9'
+
 
 services:
   web:
     image: nginx:latest
     ports:
       - "8080:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - mynetwork
 
@@ -18,10 +16,8 @@ services:
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: appdb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpass
+      MYSQL_ROOT_PASSWORD: qweqwe123
+      MYSQL_DATABASE: docker_db
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
